# bot

./: .gitignore  Cargo.toml  config.yml  flake.nix  package.nix
src/: config.rs  main.rs
src/commands/: mod.rs  test.rs
