[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.18", features = ["derive"] }
regex = "1.9.1"
serde = "1.0.174"
serde_yaml = "0.9.25"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true  
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
